force-app/main/default/objects/Raw_Material__c/Raw_Material__c.object-meta.xml
<CustomObject>
    <label>Raw Material</label>
    <nameField>
        <displayFormat>RM-{0000000000}</displayFormat>
        <label>Raw Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>