force-app/main/default/objects/Raw_Material__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>