force-app/main/default/objects/Raw_Material__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>18</length>
    <type>Text</type>
</CustomField>