force-app/main/default/objects/Raw_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Month__c</columns>
    <columns>Day__c</columns>
    <columns>Quote__c</columns>
    <columns>Region__c</columns>
    <columns>Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>